Fixed proxy error

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-DB_HOST=34.69.136.50
-DB_USER=root
+DB_HOST=localhost
+DB_USER=fajrwajr
 DB_PASS=frtysk489
-DB_DATABASE=googlecloud
+DB_DATABASE=cloud
 PORT=4000
 NODE_ENV=Dev
